* put a 0 margin to <p> that may encapsulate the message

* possible fix to bug 121560 (crash when receiving messages)
   i'm not sure this fix the bug since i haven't been able to reproduce. but when seeing the backtrace, it will probably.
BUG: 121560


svn path=/branches/kopete/0.12/kopete/; revision=525020